Refactor content index/show views

--- a/app/assets/stylesheets/departments.scss
+++ b/app/assets/stylesheets/departments.scss
@@ -18,12 +18,13 @@
   background-color: #a93636;
   text-decoration: none;
 
-  h2, p {
+  h4, p {
     margin: 0;
     color: white;
   }
   p {
     margin-top: 4px;
+    font-size: 14px;
   }
 
   transition: 0.25s ease;
