--- a/app/views/history_trackers/index.haml
+++ b/app/views/history_trackers/index.haml
@@ -18,5 +18,5 @@
             = track.modifier.name
             = render 'badges/badge', badge: track.modifier.badge
         %td= track.action
-= paginate @tracks, theme: 'tb3'
+= paginate @tracks, theme: 'twitter-bootstrap-4'
 = link_to 'Back',  @trackable, class: "btn btn-warning pull-right"
