--- a/app/views/links/index.haml
+++ b/app/views/links/index.haml
@@ -53,4 +53,4 @@
               %td
                 = time_ago_in_words(link.created_at)
                 ago
-    = paginate @links, theme: 'tb3'
+    = paginate @links, theme: 'twitter-bootstrap-4'
