--- a/app/views/users/index.haml
+++ b/app/views/users/index.haml
@@ -22,7 +22,7 @@
                 - if user.bot
                   = fa_icon 'certificate'
               %td= user.email
-    = paginate @users, theme: 'tb3'
+    = paginate @users, theme: 'twitter-bootstrap-4'
 
 :javascript
   $(function() {
