Fix navbar responsiveness

--- a/app/views/partials/_header.haml
+++ b/app/views/partials/_header.haml
@@ -1,4 +1,4 @@
-%header.d-none.d-sm-block.py-3
+%header.d-none.d-md-block.py-3
   .container.d-flex.justify-content-between.align-items-center
     .d-flex.align-items-center
       = link_to root_path do
