--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -1,6 +1,6 @@
-%nav.navbar.navbar-expand-lg.navbar-dark{role: :navigation, class: Current.user&.admin_enabled? ? 'bg-dark' : 'bg-syosset'}
+%nav.navbar.navbar-expand-md.navbar-dark{role: :navigation, class: Current.user&.admin_enabled? ? 'bg-dark' : 'bg-syosset'}
   .container
-    .d-flex.flex-grow-1.justify-content-between.d-sm-none
+    .d-flex.flex-grow-1.justify-content-between.d-md-none
       = link_to root_path, class: 'navbar-brand' do
         .logo-mobile
           = svg 'icon'
@@ -9,7 +9,9 @@
           = render "partials/nav/day_indicator"
         - else
           = render "partials/nav/closure_indicator"
-    .collapse.navbar-collapse
+    %btn.navbar-toggler{'data-toggle': 'collapse', 'data-target': '#navbarSupportedContent'}
+      %span.navbar-toggler-icon
+    .collapse.navbar-collapse#navbarSupportedContent
       %ul.navbar-nav.mr-auto
         %li.nav-item{class: active_controller('welcome/home')}
           = link_to t('nav.home'), root_path, class: 'nav-link'
