--- a/app/views/integrations/index.haml
+++ b/app/views/integrations/index.haml
@@ -1,5 +1,5 @@
 %ol.breadcrumb
-  %li.active= t('integrations.title')
+  %li.breadcrumb-item.active= t('integrations.title')
   = link_to new_integration_path, class: 'pull-right' do
     = fa_icon 'plug'
     = t('integrations.new.title')
