--- a/app/views/integrations/providers.haml
+++ b/app/views/integrations/providers.haml
@@ -1,6 +1,6 @@
 %ol.breadcrumb
-  %li= link_to t('integrations.title'), integrations_path
-  %li.active
+  %li.breadcrumb-item= link_to t('integrations.title'), integrations_path
+  %li.breadcrumb-item.active
     = fa_icon 'plug'
     = t('integrations.new.title')
 
