--- a/app/views/permissions/policies/edit.haml
+++ b/app/views/permissions/policies/edit.haml
@@ -1,7 +1,6 @@
 %ol.breadcrumb
-  %li= link_to 'Policies', policies_path
-  %li.active= link_to @policy.name, @policy
-
+  %li.breadcrumb-item= link_to 'Policies', policies_path
+  %li.breadcrumb-item.active= link_to @policy.name, @policy
 
 %br
 .panel.panel-default
