--- a/app/views/permissions/policies/index.haml
+++ b/app/views/permissions/policies/index.haml
@@ -1,10 +1,9 @@
-%ol.breadcrumb
-  %li.active Policies
-%h1
-  Policies
-  .pull-right
+.d-flex.justify-content-between
+  %h1 Policies
+  .m-0
     = render 'partials/modtools'
-%table.table.table-responsive
+
+%table.table.table-hover
   %thead
     %th ID
     %th Priority
