--- a/app/views/permissions/policies/new.haml
+++ b/app/views/permissions/policies/new.haml
@@ -1,5 +1,5 @@
 %ol.breadcrumb
-  %li= link_to 'Policies', policies_path
-  %li.active Create Policy
+  %li.breadcrumb-item= link_to 'Policies', policies_path
+  %li.breadcrumb-item.active Create Policy
 
 = render 'form'
