--- a/app/views/permissions/targets/new.haml
+++ b/app/views/permissions/targets/new.haml
@@ -1,7 +1,7 @@
 %ol.breadcrumb
-  %li= link_to 'Policies', policies_path
-  %li= link_to @policy.name, policy_path(@policy)
-  %li= link_to 'Targets', policy_targets_path(@policy)
-  %li.active Create Target
+  %li.breadcrumb-item= link_to 'Policies', policies_path
+  %li.breadcrumb-item= link_to @policy.name, policy_path(@policy)
+  %li.breadcrumb-item= link_to 'Targets', policy_targets_path(@policy)
+  %li.breadcrumb-item.active Create Target
 
 = render 'form'
