--- a/app/views/authorizations/new.haml
+++ b/app/views/authorizations/new.haml
@@ -1,7 +1,7 @@
 %ol.breadcrumb
-  %li= link_to 'Users', users_path
-  %li= link_to @user.name, user_path(@user)
-  %li= link_to 'Authorizations', edit_user_path(@user)
-  %li.active Create Authorization
+  %li.breadcrumb-item= link_to 'Users', users_path
+  %li.breadcrumb-item= link_to @user.name, user_path(@user)
+  %li.breadcrumb-item= link_to 'Authorizations', edit_user_path(@user)
+  %li.breadcrumb-item.active Create Authorization
 
 = render 'form'
