--- a/app/views/permissions/targets/edit.haml
+++ b/app/views/permissions/targets/edit.haml
@@ -1,7 +1,8 @@
 %ol.breadcrumb
-  %li= link_to 'Policies', policies_path
-  %li= link_to @policy.name, policy_path(@policy)
-  %li= link_to 'Targets', policy_targets_path(@policy)
-  %li= link_to @target.id, policy_target_path(@policy, @target)
-  %li Edit Target
+  %li.breadcrumb-item= link_to 'Policies', policies_path
+  %li.breadcrumb-item= link_to @policy.name, policy_path(@policy)
+  %li.breadcrumb-item= link_to 'Targets', policy_targets_path(@policy)
+  %li.breadcrumb-item= link_to @target.id, policy_target_path(@policy, @target)
+  %li.breadcrumb-item Edit Target
+
 = render 'form'
