--- a/app/views/welcome/home/_quicklinks.haml
+++ b/app/views/welcome/home/_quicklinks.haml
@@ -17,6 +17,6 @@
         = t('links.default.calendar')
     - @links.each do |link|
       %li.list-group-item
-        = link_to link.target do
+        = link_to link[:target] do
           = fa_icon link.icon.blank? ? 'link' : link.icon.gsub('fa-', '')
           = link.name
