--- a/app/views/alerts/index.haml
+++ b/app/views/alerts/index.haml
@@ -1,8 +1,11 @@
-%h1
-  Your alerts
-  %a.btn.btn-primary.pull-right{:href => read_all_alerts_path, :data => {:method => "post", :confirm => "Are you sure you want to mark all alerts as read?"}}
-    = fa_icon "tasks inverse"
-    Mark all read
+.d-flex.justify-content-between
+  %h1
+    Your alerts
+  .m-0
+    %a.btn.btn-primary.pull-right{:href => read_all_alerts_path, :data => {:method => "post", :confirm => "Are you sure you want to mark all alerts as read?"}}
+      = fa_icon "tasks inverse"
+      Mark all read
+
 %ul.list-group
   - @all_alerts.each do |alert|
     %li.list-group-item= render partial: 'partials/alerts/alert', object: alert
