--- a/app/views/collaborator_groups/edit.haml
+++ b/app/views/collaborator_groups/edit.haml
@@ -1,27 +1,24 @@
-.page-wrapper
-  %header.page-heading.clearfix
-    %h1.heading-title.pull-left
-      Manage collaborators for
-      = link_to @collaborator_group.collaboratable.name || "resource", @collaborator_group.collaboratable
-  .page-content
-    .panel.panel-default
-      .panel-heading
-        %h3.panel-title Collaborators
-      %ul.list-group
-        - User.in_group(@collaborator_group).each do |user|
-          %li.list-group-item
-            = user.name
-            %span.pull-right
-              %a.btn.btn-xs.btn-warning{href: collaborator_group_membership_path(@collaborator_group, user_id: user), data: {method: :delete}}
-                = fa_icon 'times'
-      .panel-footer
-        %b Search by name or email address
-        = form_for @collaborator_group, url: collaborator_group_memberships_path(@collaborator_group), method: :post do |f|
-          .input-group
-            %input#search.form-control{:placeholder => "Search", :type => "text",  "data-provide" => "typeahead"}
-            %span.input-group-btn
-              = f.submit "Add Collaborator", class: "btn btn-default"
-            %input#search_id{:name => "user_id", :type => "hidden"}/
+%h1
+  Manage collaborators for
+  = link_to @collaborator_group.collaboratable.name || 'resource', @collaborator_group.collaboratable
+
+= form_for @collaborator_group, url: collaborator_group_memberships_path(@collaborator_group), method: :post do |f|
+  .input-group
+    %input#search.form-control{:placeholder => 'Search by name or email address', :type => "text",  "data-provide" => "typeahead"}
+    .input-group-append
+      = f.submit 'Add Collaborator', class: 'btn btn-primary'
+    %input#search_id{name: "user_id", type: 'hidden'}/
+
+%ul.list-group.mt-3
+  - User.in_group(@collaborator_group).each do |user|
+    %li.list-group-item.d-flex
+      %a.btn.btn-outline-danger{href: collaborator_group_membership_path(@collaborator_group, user_id: user), data: {method: :delete}}
+        .my-1
+          = fa_icon 'times'
+      .ml-3
+        %strong= user.name
+        %br/
+        = user.email
 
 :javascript
   $(function() {
