--- a/app/views/history_trackers/show.haml
+++ b/app/views/history_trackers/show.haml
@@ -1,13 +1,16 @@
-.row.mt
-  .col-sm-12
-    %h2= "Diff between Version #{@track.version} and Current Version"
-    :css
-      #{Diffy::CSS}
-    .well.diff
-      - @track.original.keys.each do |field|
-        %p
-          %strong= "#{field}:"
-          = diff(@track.original[field], @track.modified[field])
-    %p
-      = "Version authored by #{@track.modifier.name} on #{@track.created_at} via '#{@track.action.humanize}'."
-      = link_to 'Back',  history_trackers_path("#{@trackable.class.name.underscore}_id" => @trackable.id), class: "btn btn-warning pull-right"
+%h1= "Changes in ##{@track.version}"
+%p
+  Authored by
+  = @track.modifier&.name || 'Unknown'
+  = time_ago_in_words(@track.created_at)
+  ago.
+
+- @track.original.keys.each do |field|
+  .card.mb-3
+    .card-header= field.capitalize
+    = diff(@track.original[field], @track.modified[field])
+
+= link_to 'Back',  history_trackers_path("#{@trackable.class.name.underscore}_id" => @trackable.id), class: "btn btn-warning pull-right"
+
+:css
+  #{Diffy::CSS}
